bug:Added the nav tag to wrap the button tag and changed the section tag to main and also make sure the nav align well and also rename the classes of the tags to make it more readeable

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* start of header styling */
-.header-div {
+.logo-div {
   background: var(--primary);
   display: flex;
   height: 50px;
@@ -7,7 +7,7 @@
   padding: 5px 20px;
 }
 
-.header-logo {
+.logo-link {
   text-transform: capitalize;
   font-family: 'Poppins', sans-serif;
   text-decoration: none;
@@ -16,11 +16,14 @@
   font-weight: bold;
 }
 
-.header-button {
+.hamburger-nav {
+  padding-top: 5px;
+}
+
+.hamburger-button {
   background: transparent;
   border: none;
   color: #fff;
-  padding-bottom: 5px;
   cursor: pointer;
 }
 
